Ajustes mazda details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,14 +182,14 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+
 #header {
-  background: #000;
+  background: rgba(0, 0, 0, 0.1);
   transition: all 0.5s;
   z-index: 997;
   height: 70px;
   top: 60px;
 }
-
 
 #header.header-scrolled {
   background: #000;;
@@ -224,6 +224,16 @@ h6 {
   background: #000;
 }
 
+/*--------------------------------------------------------------
+# Header Detail
+--------------------------------------------------------------*/
+.header-360 {
+  background: #000 !important;
+  transition: all 0.5s;
+  z-index: 997;
+  height: 70px;
+  top: 60px;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
