--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,7 +506,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   overflow: hidden;
   position: relative;
   background: url("../img/mazda1-banner.jpg") top center;
@@ -542,7 +542,7 @@ h6 {
 #hero h2 {
   color: #fff;
   margin-bottom: 30px;
-  font-size: 70px; /*48*/
+  font-size: 90px; /*48*/
   font-weight: 700;
 }
 
@@ -552,6 +552,7 @@ h6 {
   animation-delay: 0.4s;
   margin: 0 auto 30px auto;
   color: #fff;
+  font-size: 20px;
 }
 
 #hero .carousel-control-prev,
