--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2345,3 +2345,7 @@ textarea:focus, input:focus, input[type]:focus {
   font-size: 13px;
   color: #fff;
 }
+.check-ajustar{
+  width: 10px;
+  height: 10px;
+}
