--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,14 +517,17 @@ h6 {
   transition: 0.3s;
 }
 
+
 #hero:before {
   content: "";
   /*background: rgba(6, 101, 183, 0.9);*/
   position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, .4);
+  justify-content: center;
+  text-align: center;
+
 }
 
 #hero .carousel-container {
@@ -553,6 +556,7 @@ h6 {
   margin: 0 auto 30px auto;
   color: #fff;
   font-size: 20px;
+  font-weight: 500;
 }
 
 #hero .carousel-control-prev,
