--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,7 +637,6 @@ section {
   text-align: center;
   padding-bottom: 30px;
 }
-
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
@@ -2359,3 +2358,27 @@ textarea:focus, input:focus, input[type]:focus {
   font-weight: 350 !important;
   font-size: 1rem !important;
 }
+.hibrid{ 
+  color: white;
+  padding: 50px;
+}
+.hibrid h2{ 
+  color: white;
+}
+.fondo{
+  background-color:rgba(0, 0, 0);
+  background-size: cover;
+
+}
+
+
+/* .hibrid::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, .5);
+  justify-content: center;
+  text-align: center;
+
+} */
